# VCC-PKI

./: .env.example  .gitignore  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  DATABASE_SCHEMA.md  DEVELOPMENT.md  DOCUMENTATION_TODO.md  DOKUMENTATIONS_ABSCHLUSS.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTIERUNG_ABGESCHLOSSEN.md  INTEGRATION_QUICK_START.md  LEGACY_FILES_AUDIT.md  PROJECT_STATUS.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT_SUMMARY.md  SERVICE_INTEGRATION_TODO.md  STRATEGIE_ZUSAMMENFASSUNG.md  VCC_PKI_WEITERENTWICKLUNGSSTRATEGIE.md  VCC_SERVICE_INTEGRATION_EXAMPLES.md  cli_requirements.txt  docker-compose.vcc.yml  pki_admin_cli.py  pki_manager_gui.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: instructions
backups/legacy-20251013/vcc_pki/: __init__.py  (+1 more)
ca_storage/: intermediate_ca.pem  intermediate_ca_config.json  intermediate_ca_key.pem  root_ca.pem  root_ca_config.json  root_ca_key.pem
client/: README.md  example_usage.py  setup.py
client/vcc_pki_client/: __init__.py  client.py  exceptions.py  ssl_helpers.py
config/: pki_server.yaml
database/: pki_server.db  schema.sql
docs/: API_DOCUMENTATION.md  API_IMPLEMENTATION_COMPLETE.md  BULK_SIGNING_GUI.md  BULK_SIGNING_QUICKSTART.md  CLASSIFICATION_GUIDE.md  CODE_HEADER_EXAMPLES.md  CODE_HEADER_SUMMARY.md  CODE_MANIFEST_TECHNICAL.md  CODE_SIGNING.md  DATABASE_API_INTEGRATION_COMPLETE.md  DATABASE_IMPLEMENTATION_COMPLETE.md  EXECUTIVE_SUMMARY.md  GUI_SCREENSHOTS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_v2.md  PKI_ADMIN_CLI.md  PKI_ADMIN_CLI_COMPLETE.md  PKI_CLIENT_LIBRARY_COMPLETE.md  PKI_PROJECT_COMPLETE.md  PKI_SERVER_ARCHITECTURE.md  PRE_COMMIT_HOOK_COMPLETE.md  PRE_COMMIT_HOOK_GUIDE.md  PRE_COMMIT_HOOK_QUICKSTART.md  SERVICE_INTEGRATION_QUICK_GUIDE.md  TECHNICAL_ARCHITECTURE_FUTURE.md  interne ca.txt  zero trust.txt
examples/: code_signing_example.py  simple_signing.py  test_document.txt
keys/: private_key.pem  public_key.pem
scripts/: README.md  bulk_sign_gui.py  bulk_sign_vcc.py  demo_pre_commit_hook.ps1  generate_keys.py  init_database.py  pre-commit  pre-commit.ps1  restart_server.ps1  security-check.sh  start_all.ps1  start_frontend.ps1  start_gui.ps1  start_pki_server.ps1  start_server.ps1  status_all.ps1  status_server.ps1  stop_all.ps1  stop_frontend.ps1  stop_server.ps1  test_pre_commit_hook.ps1  vcc-health-check.sh
service_certificates/: certificate_registry.json
service_certificates/covina-backend/: cert.pem  key.pem
service_certificates/covina-ingestion/: cert.pem  key.pem
service_certificates/pki-server/: cert.pem  key.pem
service_certificates/veritas-backend/: cert.pem  key.pem
src/: auto_renewal_engine.py  ca_manager.py  certificate_templates.py  classify_code.py  code_header.py  code_manifest.py  crl_distribution.py  crypto_utils.py  database.py  database_migration.py  hsm_integration.py  monitoring_dashboard.py  multi_tenant_manager.py  ocsp_responder.py  ocsp_stapling.py  pki_server.py  runtime_verifier.py  service_cert_manager.py  timestamp_authority.py  vcc_service_integration.py
tests/: test_phase1_integration.py
tests/fixtures/: test_document.txt
(+60 files in other folders)
