[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vcc-pki"
version = "0.1.0"
description = "PKI/CA Library für Covina Framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "VCC Team", email = "info@vcc.local"}
]
keywords = ["pki", "ca", "certificate", "signing", "cryptography", "covina"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "cryptography>=41.0.0",
    "sigstore>=2.0.0",
    "tuf>=3.0.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.0.292",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]
all = [
    "vcc-pki[dev,api]",
]

[project.urls]
Homepage = "https://github.com/covina/vcc-pki"
Documentation = "https://github.com/covina/vcc-pki/docs"
Repository = "https://github.com/covina/vcc-pki"
Issues = "https://github.com/covina/vcc-pki/issues"

[project.scripts]
vcc-pki = "vcc_pki.api.cli:main"

[tool.setuptools]
packages = ["vcc_pki", "vcc_pki.ca", "vcc_pki.signing", "vcc_pki.keystore", "vcc_pki.trust", "vcc_pki.mock", "vcc_pki.utils", "vcc_pki.api"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=vcc_pki",
    "--cov-report=html",
    "--cov-report=term",
    "--cov-report=xml",
    "-v"
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.coverage.run]
source = ["vcc_pki"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
